# FutaHex2

./: .gitignore  CMakeLists.txt  README.md
doc/: compile_linux_chs.md  compile_linux_en.md  compile_windows_chs.md  compile_windows_en.md  sample_ai.md
doc/pages/: compile.md
include/fhcore/: mcts.h
include/fhgui/: entry.h
include/fhutils/: board.h  board.inl  color.h  iengine.h  logger.h  position.h  position.inl  record.h  save.h  texthelper.h
samples/sample_determine_next_move/sample_determine_next_move/: determine_next_move.cpp  sample_determine_next_move.vcxproj
src/: CMakeLists.txt
src/fhcore/: CMakeLists.txt  board.cpp  board.h  board.inl  color.cpp  color.h  disjointset.cpp  disjointset.h  disjointset.inl  eval.cpp  eval.h  hexutils.cpp  hexutils.h  iengine.cpp  iengine.h  logger.cpp  logger.h  mcts.cpp  mcts.h  mcts_st.cpp  mcts_st.h  position.cpp  position.h  position.inl  record.cpp  record.h
src/fhgui/: CMakeLists.txt  app.cpp  app.h  app.qrc  canvas.cpp  canvas.h  entry.cpp
src/fhutils/: CMakeLists.txt  board.cpp  color.cpp  iengine.cpp  logger.cpp  position.cpp  record.cpp  save.cpp  texthelper.cpp
src/futahex2/: CMakeLists.txt  app.cpp  app.h  app.qrc  app.ui  canvas.cpp  canvas.h  futahex2.vcxproj  futahex2.vcxproj.filters  main.cpp
test/: CMakeLists.txt  fhcore_test.cpp  fhcore_test.h  main.cpp  test_all.cpp  test_fhutils_board.cpp  test_fhutils_color.cpp  test_fhutils_logger_msg.cpp  test_fhutils_position.cpp  test_fhutils_texthelper.cpp
vsproject/: .gitignore  FutaHex2_2015.sln
vsproject/fhcore/: fhcore.vcxproj  fhcore.vcxproj.filters
vsproject/futahex2/: .gitignore  futahex2.vcxproj  futahex2.vcxproj.filters
vsproject/test/: test.vcxproj  test.vcxproj.filters
