PROJECT (FHGUI)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTORCC ON)
FIND_PACKAGE(Qt5 REQUIRED Core Gui Widgets)

FILE(GLOB SOURCE_FILES "./*.cpp")
FILE(GLOB HEADER_FILES "./*.h")
FILE(GLOB FORM_FILES "./*.ui")
FILE(GLOB RESOURCE_FILES "./*.qrc")

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

# F*CK
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/fhcore)

ADD_EXECUTABLE(fhgui
    ${SOURCE_FILES}
    ${HEADER_FILES}
    ${FORM_FILES}
    ${RESOURCE_FILES})
    
target_link_libraries(fhgui Qt5::Core Qt5::Gui Qt5::Widgets)

# fhcore
ADD_DEPENDENCIES(fhgui fhcore)
TARGET_LINK_LIBRARIES(fhgui fhcore)

IF(UNIX)
    TARGET_LINK_LIBRARIES(fhgui pthread)
ENDIF()
